final swagger changes
