# backend/docs/swagger.json
@@ -8,13 +8,13 @@
     "host": "localhost:9010",
     "basePath": "/",
     "paths": {
-        "/": {
-            "get": {
-                "description": "Endpoint used to get all events from db.",
+        "/api/createEvent": {
+            "post": {
+                "description": "Endpoint used to create an entry of the event in db.",
                 "tags": [
                     "Events"
                 ],
-                "summary": "Get Event",
+                "summary": "Create Event",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -29,13 +29,15 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Endpoint used to create an entry of the event in db.",
+            }
+        },
+        "/api/getEvent": {
+            "get": {
+                "description": "Endpoint used to get all events from db.",
                 "tags": [
                     "Events"
                 ],
-                "summary": "Create Event",
+                "summary": "Get Event",
                 "responses": {
                     "200": {
                         "description": "OK",
